--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header {
   header .navigations a{
     position: relative;
     color: #fff;
-    font-size: 1.4rem;
+    font-size: 1.05rem;
     font-weight: 500;
     text-decoration: none;
     margin-left: 30px;
@@ -245,7 +245,7 @@ header {
   font-size: 50px;
   color: #fff;
   cursor: pointer;
-  
+  display: none;
 }
 #check{
   display: none;
