--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html{
   transition: 0.5s ease;
 }
 iframe{
-  width: 700px;
+  width: 550px;
 }
 body{
     font-family: Poppins, sans-serif;
@@ -337,4 +337,91 @@ header {
   
 
   
+}
+@media screen and (max-width: 360px) and (max-height: 640px) {
+  .checkbtn {
+    display: block;
+    color: #fff;
+    margin-right: -400px;
+    margin-top: -400px;
+    cursor: pointer;
+  }
+
+  iframe {
+    width: 315px; /* Adjust the iframe width for the Galaxy S5 */
+    height: auto; /* Allow the height to adjust proportionally */
+  }
+
+  img {
+    width: 100%;
+    max-width: 150px; /* Reduce the maximum width for images */
+    /* Adjusted margin for spacing */
+  }
+
+  header {
+    padding: 10px;
+    justify-content: space-between; /* Center header content */
+  }
+
+  ul.dropdown {
+    display: none;
+  }
+
+  header .navigations {
+    text-align: center;
+    position: relative;
+    top: 80px;
+    left: 0%;
+    background: transparent;
+    width: 100%;
+    height: auto;
+    padding: 10px 10px;
+    background: #333;
+    transition: all 0.5s;
+    display: none;
+  }
+
+  #check:checked + label .checkbtn {
+    display: block;
+  }
+
+  header .navigations a {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 10px; /* Add some spacing between items */
+    display: block; /* Display navigation items as block elements */
+  }
+
+  header .container {
+    flex-direction: column;
+    align-items: center; /* Center-align items */
+  }
+
+  section {
+    padding: 21px;
+  }
+
+  .home .content {
+    width: 100%;
+    margin: 20px 0;
+    text-align: center;
+  }
+
+  .home .content h1 {
+    font-size: 2.5em; /* Slightly reduce font size */
+    line-height: 45px; /* Adjusted line-height */
+    text-align: left;
+  }
+
+  .home .content p {
+    font-size: 1em; /* Reduce font size */
+    text-align: left;
+    margin-bottom: 15px; /* Adjusted margin for spacing */
+  }
+
+  .home .content a {
+    padding: 8px 16px; /* Adjusted padding */
+    font-size: 1.2rem; /* Reduce font size */
+    margin-left: -120px; /* Adjusted margin */
+  }
 }
