--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100% auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -157,7 +157,7 @@ header {
 
   .home{
     position: relative;
-    width: 100%;
+    width: 100% auto;
     height: auto;
     min-height: 100vh;
     display: flex;
